# Library_project

./: README.md  db_dump.json  pyproject.toml
core/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_author_book.py  0003_reader_active_books.py  0004_alter_author_photo_alter_reader_active_books_and_more.py
library_project/: settings.py  urls.py
