[tool.poetry]
name = "library-project"
version = "0.1.0"
description = ""
authors = ["Oskar Agzigitov <110802094+AgzigitovOskar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "library_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
